--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.7.1",
     "axios": "^1.4.0",
     "customize-cra": "^1.0.0",
+    "dayjs": "^1.11.9",
     "flowbite-react": "^0.5.0",
     "font-awesome": "^4.7.0",
     "i18next": "^23.4.1",
@@ -24,6 +25,7 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-owl-carousel": "^2.3.3",
     "react-player": "^2.12.0",
@@ -31,6 +33,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
